<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.ranchosoftware.diningjoint.MainActivity"
              android:background="@drawable/background_skyline"
              android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ibFind"
                android:src="@drawable/icon_find_statelist"
                android:background="@null"
                android:minWidth="80dp"
                android:minHeight="80dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="false"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/find"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/find"
                android:id="@+id/textView"
                android:gravity="center_horizontal"
                android:textSize="20dp"
                android:textColor="@color/DJMaroon"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ibNearby"
                android:src="@drawable/icon_nearby_statelist"
                android:background="@null"
                android:minWidth="80dp"
                android:minHeight="80dp"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/nearby"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nearby"
                android:id="@+id/textView4"
                android:gravity="center_horizontal"
                android:textColor="@color/DJMaroon"
                android:textSize="20dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ibTipCalculator"
                android:src="@drawable/icon_tip_calc_statelist"
                android:background="@null"
                android:minWidth="80dp"
                android:minHeight="80dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="false"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/tip"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tip"
                android:id="@+id/textView2"
                android:gravity="center_horizontal"
                android:textSize="20dp"
                android:textColor="@color/DJMaroon"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ibSocial"
                android:src="@drawable/icon_social_statelist"
                android:background="@null"
                android:minWidth="80dp"
                android:minHeight="80dp"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/social"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/connect"
                android:id="@+id/textView8"
                android:gravity="center_horizontal"
                android:textColor="@color/DJMaroon"
                android:textSize="20dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ibFunPix"
                android:src="@drawable/icon_funpix_statelist"
                android:background="@null"
                android:minWidth="80dp"
                android:minHeight="80dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="false"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/coupons"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/social_pics"
                android:id="@+id/textView9"
                android:gravity="center_horizontal"
                android:textSize="20dp"
                android:textColor="@color/DJMaroon"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ibHappyHour"
                android:src="@drawable/icon_happy_hour_statelist"
                android:background="@null"
                android:minWidth="80dp"
                android:minHeight="80dp"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/happy_hour"
                android:focusableInTouchMode="true"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/happy_hour"
                android:id="@+id/textView11"
                android:gravity="center_horizontal"
                android:textColor="@color/DJMaroon"
                android:textSize="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/shake_for_fortune"
            android:id="@+id/textView5"
            android:layout_gravity="bottom|center_horizontal"
            android:gravity="center_horizontal"
            android:textStyle="italic"
            android:textColor="@color/White"/>
    </LinearLayout>
</LinearLayout>
